# catalog-maintenance

./: .cursorrules  .env.example  .gitignore  ACCOUNT_JSON_STRUCTURE.md  ACCOUNT_MANAGER_MERGE_PLAN.md  AGENT_PROMPT_ARCHITECTURE.md  CATALOG_LABELS_CACHING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  COPILOT_NOTES.md  DESCRIPTOR_GENERATION_GUIDE.md  ENHANCED_PRODUCT_DISCOVERY_VISION.md  GITHUB_ISSUE_RAG_UPGRADE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_NOTES_MULTI_AGENT.md  IMPLEMENTATION_SUMMARY_DESCRIPTOR_CACHING.md  MONOREPO_MIGRATION.md  MONOREPO_MIGRATION_COMPLETE.md  MULTI_AGENT_INTELLIGENT_DISCOVERY_PLAN.md  NEURAL_RERANKING_ARCHITECTURE.md  NEXTJS_PRODUCT_SERVICE_IMPLEMENTATION.md  PRODUCT_CATALOG_RESEARCHER_IMPLEMENTATION.md  PRODUCT_MODAL_ROADMAP.md  PROJECT_FILEMAP.md  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.3.0.md  RESEARCH_PIPELINE_REFACTOR_PLAN.md  RESEARCH_STORAGE_FIX_COMPLETE.md  RUN_INGESTION_GUIDE.md  SEARCH_COMPARISON_GUIDE.md  SEPARATE_INDEXES_MIGRATION.md  VOICE_AGENT_PERFORMANCE_IMPROVEMENTS.md  activate_venv.sh  benchmark_hybrid_search.py  brand_researcher.py  catalog_sync.py  check_descriptor_progress.py  (+36 more)
ROADMAP/: checkpoint_implementation_plan.md  enhanced_implementation_plan.md  enhanced_knowledge_ingestion_plan.md  ingestion_and_catalog_maintenance.md  observability_pattern.md  tavily_crawl_integration_summary.md
archive/: product_modal_template.html  sample_luxury_modal.html  sample_specialized_enhanced.html  sample_specialized_modal.html
configs/: __init__.py  settings.py
deployments/: Dockerfile.redis  README.md
docs/: BM25_MIGRATION.md  PHASE2_HYBRID_SEARCH.md  PHASE3_AUTOMATIC_SYNC.md  PHASE4_SYSTEM_INTEGRATION.md  workflow_api_spec.md
notebooks/: brand_research.ipynb  manual_testing.ipynb
run/: README.md  analyze_price_distribution.py  brand_research.py  extract_stt_vocabulary.py  generate_descriptors.py  generate_descriptors_with_config.py  ingest_catalog.py  load_products_to_redis.py  research_industry_terminology.py  test_price_enhancement.py  test_voice_search.py  update_descriptor_prices.py  voice_main.py  voice_search.py
scripts/: README.md  batch_operations.sh  brand_maintenance.sh  brand_manager.py  brand_manager.sh  brand_onboarding.sh  brand_restart.py  brand_status.sh  bump_version.sh  consolidate_liddy_classes.py  convert_specialized_csv_to_json.py  create_release.sh  docker_entrypoint.sh  install_packages.sh  (+12 more)
(+204 files in other folders)
